--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url('https://i.imgur.com/b9r5sEL.jpg') bottom center;
+  background: url('https://picsum.photos/seed/picsum/1400/1600') bottom center;
   background-size: cover;
 }
 
