add background gif

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background: url('https://media1.tenor.com/images/7ba77f56c339cace7d6f022b9307628c/tenor.gif?itemid=5730293') bottom center;
+  background: url('https://cdn.dribbble.com/users/219806/screenshots/2609140/we-will-rock-you5.gif') bottom center;
   background-size: cover;
 }
 
@@ -8,7 +8,6 @@ h1 {
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
    color: rgb(0, 0, 0);
    text-align: center;
-   margin-top: 10rem;
    font-size: 40px;
 }
 p {
